--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "jsdom": "^14.0.0",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.4.4",
-    "node-sass": "^4.14.1",
     "nodemon": "^2.0.3",
+    "sass": "^1.59.3",
     "sass-loader": "^7.1.0",
     "socket.io": "^2.2.0",
     "standard-version": "^9.0.0",
